hphp/hack/test/typecheck/refinements/function_invalidation_7.bad.php.exp
File "function_invalidation_7.bad.php", line 16, characters 15-19:
Invalid argument (Typing[4110])
  File "function_invalidation_7.bad.php", line 11, characters 20-22:
  Expected `int`
  File "function_invalidation_7.bad.php", line 8, characters 10-13:
  But got `?int`
  File "function_invalidation_7.bad.php", line 15, characters 5-17:
  All the local information about `$c->i` has been invalidated during this call.
This is a limitation of the type-checker; use a local if that's the problem.
